--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "vscode-css-languageservice": "^2.0.0",
     "vscode-html-languageservice": "^2.0.1",
     "vscode-languageserver": "^3.0.5",
-    "vscode-uri": "^1.0.0"
+    "vscode-uri": "^1.0.0",
+    "vue-template-compiler": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^6.0.54",
