--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,6 +4,8 @@
     "module": "commonjs",
     "outDir": "../client/server",
     "sourceMap": true,
+    "noUnusedLocals": true,
+    "noImplicitThis": true,
     "lib": [
       "es5", "es2015.promise", "dom"
     ]
